add nginx config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,5 +2,15 @@ services:
   helloworld:
     container_name: helloworld
     image: crccheck/hello-world
+    expose:
+      - 8000
+
+  nginx:
+    container_name: nginx
+    restart: unless-stopped
+    image: nginx
     ports:
-      - 8081:8000
+      - 8081:8081
+      - 443:443
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
